Added Database schema

--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "nodejs-zaio-project",
-  "version": "1.0.0",
-  "description": "Backend API for a property web application",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AmwataPhilip/nodejs-zaio-project.git"
-  },
-  "keywords": [
-    "Property",
-    "Backend",
-    "Api",
-    "Node"
-  ],
-  "author": "Philip Amwata",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AmwataPhilip/nodejs-zaio-project/issues"
-  },
-  "homepage": "https://github.com/AmwataPhilip/nodejs-zaio-project#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+	"name": "nodejs-zaio-project",
+	"version": "1.0.0",
+	"description": "Backend API for a property web application",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AmwataPhilip/nodejs-zaio-project.git"
+	},
+	"keywords": [
+		"Property",
+		"Backend",
+		"Api",
+		"Node"
+	],
+	"author": "Philip Amwata",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/AmwataPhilip/nodejs-zaio-project/issues"
+	},
+	"homepage": "https://github.com/AmwataPhilip/nodejs-zaio-project#readme",
+	"dependencies": {
+		"body-parser": "^1.19.0",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-handlebars": "^3.1.0",
+		"mongoose": "^5.7.5"
+	},
+	"devDependencies": {
+		"nodemon": "^1.19.4"
+	}
 }
