--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-handlebars": "^3.1.0",
-		"mongoose": "^5.7.5"
+		"jose": "^1.10.1",
+		"mongoose": "^5.7.5",
+		"morgan": "^1.9.1"
 	},
 	"devDependencies": {
 		"nodemon": "^1.19.4"
